# image-stitcher

./: README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.github/workflows/: backend-ci.yml  docker-publish.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  server.py  stitch.py
backend/src/: config.py  main.py
backend/src/domain/: errors.py  models.py  ports.py
backend/src/infra/cache/: in_memory_result_cache.py
backend/src/infra/opencv/: cv_codec.py  cv_image.py  cv_stitcher.py  sample_images.py
backend/src/presentation/: app.py  schemas.py
backend/src/presentation/routers/: download.py  health.py  stitch.py
backend/src/usecase/: get_stitch_result.py  stitch_images.py
backend/tests/integration/: test_stitch_api.py
backend/tests/unit/domain/: test_models.py
backend/tests/unit/infra/: test_cv_codec.py  test_cv_stitcher.py  test_in_memory_result_cache.py
backend/tests/unit/presentation/: test_stitch_api_validation.py
backend/tests/unit/usecase/: test_get_stitch_result.py  test_stitch_images.py
docs/: PDR-cpp-backend-migration.md  PDR-preview-lazy-download.md  PDR-python-backend-modernization.md  PDR-zero-cost-hosting.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  FileReader.css  FileReader.js  ImgCropper.css  ImgCropper.js  ImgSender.css  Topbar.css  Topbar.jsx
frontend/src/app/: globals.css  (+3 more)
public/: index.html
src/: FileReader.css  FileReader.js  ImgCropper.js  ImgLoader.js  ImgSender.js
(+7 files in other folders)
