[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "image-stitcher-backend"
version = "2.0.0"
description = "顕微鏡画像スティッチング API サーバー"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "python-multipart>=0.0.9",
    "opencv-python-headless>=4.10",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "T20"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*"]
ignore_missing_imports = true

[tool.importlinter]
root_package = "src"

[[tool.importlinter.contracts]]
name = "クリーンアーキテクチャのレイヤ依存"
type = "layers"
layers = [
    "src.main",
    "src.presentation",
    "src.usecase | src.infra",
    "src.domain",
]
